# codescribe2

./: .gitignore  Makefile.am  configure.ac
include/UI/: App.hpp  AtomicCounter.hpp  Container.hpp  Object.hpp  Types.hpp  VBox.hpp  Widget.hpp  Window.hpp
scripts/: autogen.sh
test/: main.cpp
ui/common/: Object.cpp
ui/gtk/: App.cpp  Widget.cpp  Window.cpp
